--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ build-backend = "setuptools.build_meta"
 name = "wikiloader"
 version = "1.0.0"
 dependencies = [
-    "requests==2.22.0"
+    "requests==2.22.0",
+    "sentencepiece==0.1.97",
+    "fasttext==0.9.2"
 ]
 
