--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ version = "1.0.0"
 dependencies = [
     "requests==2.22.0",
     "sentencepiece==0.1.97",
-    "fasttext==0.9.2"
+    "fasttext==0.9.2",
+    "scipy==1.10.1"
 ]
 
