Corrected setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,15 +3,15 @@ name = wikiloader
 version = 1.0.0
 author = Aurelie Herbelot
 author_email = aurelie@possible-worlds.xyz
-description = Downloads and preprocess a Wikipedia in any language.
+description = Downloads and preprocesses a Wikipedia in any language.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://possible-worlds.xyz
+url = https://github.com/possible-worlds-xyz/wikiloader
 project_urls =
-    Docs = https://possible-worlds.xyz
+    Docs = https://github.com/possible-worlds-xyz/wikiloader
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: AGPL-3.0 License
     Operating System :: OS Independent
 
 
