Attempt at fixing setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,8 @@ classifiers =
     License :: OSI Approved :: AGPL-3.0 License
     Operating System :: OS Independent
 
+[build-system]
+requires = ["setuptools==68.2.2"]
 
 [options]
 package_dir =
