--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ classifiers =
     License :: OSI Approved :: AGPL-3.0 License
     Operating System :: OS Independent
 
-dynamic = ["license", "keywords"]
+dynamic = ["license", "keywords", "readme", "requires-python"]
 
 [build-system]
 requires = ["setuptools==68.2.2"]
