--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = wikiloader
+name = wikinlp
 version = 0.1.0
 author = Aurelie Herbelot
 author_email = aurelie@possible-worlds.xyz
 description = Downloads and preprocesses a Wikipedia in any language.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/possible-worlds-xyz/wikiloader
+url = https://github.com/possible-worlds-research/wikinlp
 project_urls =
-    Docs = https://github.com/possible-worlds-xyz/wikiloader
+    Docs = https://github.com/possible-worlds-research/wikinlp
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: AGPL-3.0 License
